lab/golden/platform/idp/namespace-service/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-lab
  labels:
    lab.devops/component: cnpe
    team: platform
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
